<resources>
    <string name="app_name">Yame</string>
    <string name="total">Tổng tiền</string>
    <string name="pay">Đặt hàng</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_search">Search</string>
    <string name="title_more">Xem thêm</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="category_1">Áo thun</string>
    <string name="category_2">Áo sơ mi</string>
    <string name="category_3">Áo khoác</string>
    <string name="category_4">Quần</string>
    <string name="category_5">Phụ kiện</string>
    <string name="tshirt_1">Áo ngắn tay</string>
    <string name="tshirt_2">Áo dài tay</string>
    <string name="tshirt_3">Áo có cổ</string>
    <string name="tshirt_4">Áo ba lỗ</string>
    <string name="coat_1">Jacket</string>
    <string name="coat_2">Hoodie</string>
    <string name="dshirt_1">Sơ mi nam</string>
    <string name="dshirt_2">Sơ mi nữ</string>
    <string name="dshirt_3">Sơ mi tay dài</string>
    <string name="dshirt_4">Sơ mi tay ngắn</string>
    <string name="trouser_1">Quần tây</string>
    <string name="trouser_2">Quần jean</string>
    <string name="trouser_3">Quần short</string>
    <string name="trouser_4">Quần kaki</string>
    <string name="accessory_1">Giày</string>
    <string name="accessory_2">Nón</string>
    <string name="accessory_3">Ví</string>
    <string name="accessory_4">Thắt lưng</string>
    <string name="accessory_5">Balo</string>
    <string name="accessory_6">Túi đeo</string>
    <string name="btn_history">Lịch sử đặt hàng</string>
    <string name="btn_stores">Cửa hàng</string>
    <string name="btn_languages_countries">Ngôn ngữ và Quốc gia</string>
    <string name="btn_help">Giúp đỡ</string>
    <string name="detail_invoice">Chi tiết đơn hàng</string>
    <string name="imgView_fragment_more">Ảnh...</string>
    <string name="version">Phiên bản 1.0.0</string>
    <string name="btnCart">Thêm vào giỏ hàng</string>
    <string name="btnAvailableStore">Cửa hàng sẵn có</string>
    <string name="btnDetails">Chi tiết sản phẩm</string>
    <string name="btnInstruction">Hướng dẫn giặt giũ và bảo quản</string>
    <string name="tb_myAccount">Tài khoản</string>
    <string name="txt_register">Create account</string>
    <string name="txt_login">Registered customer</string>
    <string name="txt_forgotPassword"><u>Forgot your password?</u></string>
    <string name="btn_signIn">Sign in</string>
    <string name="btn_createAccount">Create account</string>
    <string name="tb_stores">Cửa hàng</string>
    <string name="btn_orderslist">Lịch sử mua hàng</string>
    <string-array name="store_list">
        <item>YaMe Q.5: 190, Nguyễn Trãi, P.3</item>
        <item>YaMe Q.6: 102 Hậu Giang</item>
        <item>YaMe Q.7: 323 Huỳnh Tấn Phát</item>
        <item>YaMe Q.9: 114 Đỗ Xuân Hợp</item>
        <item>YaMe Q.9: 200 Lê Văn Việt P.Tăng Nhơn Phú B</item>
        <item>YaMe Q.10: 770F, Sư Vạn Hạnh, P.12</item>
        <item>YaMe Q.10: 286, 3 tháng 2, P.12</item>
        <item>YaMe Q.12: 290 Phan Văn Hớn, Q.12</item>
        <item>YaMe Bình Thạnh: 138 Lê Văn Duyệt, P.1</item>
        <item>YaMe Tân Phú: 34 Nguyễn Sơn</item>
        <item>YaMe Tân Phú 2: 189 Hòa Bình</item>
        <item>YaMe Bình Tân: 232 Lê Văn Quới</item>
        <item>YaMe Gò Vấp: 417, Quang Trung, P.10</item>
        <item>YaMe Gò Vấp 2: 1096 Quang Trung</item>
        <item>YaMe Thủ Đức: 336, Võ Văn Ngân, Q. Thủ Đức</item>
        <item>YaMe Hóc Môn: 39 Quang Trung, Thới Tam Thôn</item>
    </string-array>
    <string name="tvInstruction1">Làm sao để thêm sản phẩm ưu thích vào giỏ hàng?
                                \n\nBước 1: Vào trang chủ.
                                \nBước 2: Chọn loại sản phẩm bạn cần mua và nhấn vào loại sản phẩm đó.
                                \nBước 3: Chọn sản phẩm để xem chi tiết hoặc nhấn vào biểu tượng xe đẩy để thêm sản phẩm trực tiếp vào giỏ hàng.
                                \nBước 4: Chọn Thêm vào giỏ hàng.
                                \n\nHãy quay trở lại trang chủ để mua sắm bất tận.</string>
    <string name="tvInstruction2">Làm sao để đặt hàng trên ứng dụng?
                                \n\nBước 1: Bạn cần thêm sản phẩm cần mua vào giỏ hàng.
                                \nBước 2: Chọn Đặt hàng.
                                \nBước 3: Điền đầy đủ thông tin theo yêu cầu.
                                \nBước 4: Chọn Xác nhận đặt hàng.
                                \n\nHãy quay trở lại trang chủ để mua sắm bất tận.</string>
    <string name="tvInstruction3">Bạn cần sự hỗ trợ?
                                \n\nCách 1: Điện thoại: 1900 1919.
                                \nCách 2: Email     : yame@gmail.com.
                                \nCách 3: Liên hệ với bộ phận chăm sóc khách hàng tại cửa hàng.</string>
</resources>