<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MoreFragment.Help.HelpActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarHelp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundToolbar">

            <ImageButton
                android:id="@+id/imgbtnBackHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:background="@null"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Giúp đỡ"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                android:paddingStart="10dp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:background="@android:color/white"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        android:id="@+id/cardviewHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBarHelp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnInstruction1"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_baseline_expand_more"
                android:drawablePadding="10dp"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:text="Hướng dẫn cách Thêm giỏ hàng"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvInstruction1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/tvInstruction1"
                android:layout_margin="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnInstruction1"/>

            <Button
                android:id="@+id/btnInstruction2"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_baseline_expand_more"
                android:drawablePadding="10dp"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="Hướng dẫn cách Đặt hàng"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInstruction1" />

            <TextView
                android:id="@+id/tvInstruction2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/tvInstruction2"
                android:layout_margin="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnInstruction2"/>

            <Button
                android:id="@+id/btnInstruction3"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_baseline_expand_more"
                android:drawablePadding="10dp"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:text="Liên hệ"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInstruction2" />

            <TextView
                android:id="@+id/tvInstruction3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/tvInstruction3"
                android:layout_margin="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnInstruction3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>